# vitel

./: .gitignore  LICENSE  README.md  kickoff.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
brand/: DESIGN_SYSTEM.md  social_vitel.html
brand/space/: README.md  index.html
docs/: api.md  index.md  integration.md  quickstart.md
docs/stylesheets/: extra.css
examples/ci/: deploy-gate.yml
examples/verel/: post_deploy_vitals.recipe.json
skills/vitel/: SKILL.md
src/vitel/: __init__.py  config.py  errors.py  llm.py  logging.py  netguard.py  slo.py
src/vitel/adapters/: __init__.py  _demo_assets.py  cli.py  doctor.py  mcp.py  rest.py
src/vitel/backends/: __init__.py  base.py  cloud.py  file.py  otel.py  prometheus.py  registry.py  scrape.py  selfstat.py
src/vitel/core/: __init__.py  _assemble.py  analyze.py  check.py  perceive.py  render.py  sense.py  watch.py
src/vitel/eval/: __init__.py  checks.py  trends.py
src/vitel/models/: __init__.py
src/vitel/signals/: __init__.py  burnrate.py  series.py  stats.py  trend.py
tests/: conftest.py  test_analyze.py  test_burnrate.py  test_check.py  test_cloud.py  test_demo.py  test_doctor.py  test_mcp.py  test_netguard.py  test_otel.py  test_perceive_gate.py  test_prometheus.py  test_scaffold.py  test_scrape.py  test_security_rest.py  test_security_source.py  test_selfstat.py  test_slo.py  test_watch.py
