[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vitel"
version = "0.0.0"
description = "Vitals for AI Agents — graded observability returning pass/warn/fail on metrics, SLOs and error budgets, with each finding grounded in a Metric. Sibling to AgentVision (eyes), Audel (ears) and Verel (brain)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Amit Patole", email = "amit.patole@gmail.com" }]
keywords = ["ai", "agents", "observability", "slo", "error-budget", "metrics", "sre", "sense"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "agentsensory>=0.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
prometheus = ["prometheus-api-client>=0.5", "httpx>=0.27"]
otel = ["opentelemetry-sdk>=1.24", "opentelemetry-exporter-otlp-proto-http>=1.24"]
cloud = ["datadog-api-client>=2.20", "boto3>=1.34"]
psutil = ["psutil>=5.9"]
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9"]
mcp = ["mcp>=1.2"]
all = [
    "prometheus-api-client>=0.5", "httpx>=0.27",
    "opentelemetry-sdk>=1.24", "opentelemetry-exporter-otlp-proto-http>=1.24",
    "datadog-api-client>=2.20", "boto3>=1.34",
    "psutil>=5.9",
    "fastapi>=0.110", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9", "mcp>=1.2",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/amitpatole/vitel"
Repository = "https://github.com/amitpatole/vitel"

[project.scripts]
vitel = "vitel.adapters.cli:main"
vitel-mcp = "vitel.adapters.mcp:main"
vitel-serve = "vitel.adapters.rest:main"

[project.entry-points."vitel.backends"]
file = "vitel.backends.file:FileBackend"

[tool.hatch.build.targets.wheel]
packages = ["src/vitel"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501", "UP042"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument", "fastapi.Depends", "fastapi.File", "fastapi.Form"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
